<<<<<<< HEAD
<resources>
    <string name="app_name">WhatsApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty">Welcome to WhatsApp</string>
    <string name="input_lable">User_name</string>
    <string name="sub">Send</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="New_User">New User</string>
    <string name="Existing">Existing User</string>
    <string name="title_activity_main_activity_2">MainActivity_2</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="title_activity_tabaand_list">TabaandList</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_chat_box">ChatBox</string>
    <string name="title_activity_chat_history">ChatHistory</string>
    <string name="title_activity_chat_tab">ChatTabActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="title_activity_activity3">Activity3</string>
    <string name="title_activity_activity4">Activity4</string>
    <string name="title_activity_activity5">Activity5</string>
    <string name="title_activity_in_app_message">InAppMessage</string>
    <string name="visibleTextString">Visible text</string>
    <string name="hiddenTextString">Hidden text</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Dummy Content</string>
    <string name="goto_two">Screen Two</string>
    <string name="show_button">Show</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen3_button">Screen 3</string>
    <string name="screen4_button">Screen 1</string>
    <string name="fragment_text">Fragment</string>
    <string name="screen34_button">Screen 4</string>
    <string name="screen32_button">Screen 2</string>
    <string name="screen45_button">Screen 5</string>
    <string name="screen43_button">Screen 3</string>
    <string name="grand_total">GRAND TOTAL</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove_text">Remove</string>
    <string name="buy_text">Buy</string>
    <string name="screen51_button">Screen 1</string>

>>>>>>> 2706c53f271a8c42e2898ca2e65f0e8c5340ec09
</resources>
