<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
<<<<<<< HEAD
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.company.whatsapp.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#A4C639" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView">


    </EditText>







    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0099FF"
        android:text="@string/Existing"
        android:textColor="#FFFFFF"

        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0099FF"
        android:text="@string/New_User"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="UserName"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

=======
    android:id="@+id/containerMainActivity"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helloText"/>

    <TextView android:text="@string/visibleTextString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visibleText"
        android:layout_below="@id/helloText" />

    <TextView android:text="@string/hiddenTextString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hiddenText"
        android:visibility="gone"
        android:layout_below="@id/visibleText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_two"
        android:id="@+id/button1to2"
        android:layout_centerVertical="true"
        android:onClick="sendToActivity2"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_button"
        android:id="@+id/showTextMainActivity"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button1to2"
        android:onClick="show"/>


            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
>>>>>>> 2706c53f271a8c42e2898ca2e65f0e8c5340ec09

</RelativeLayout>
