<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zemoso.zetarget.ZeTargetSampleApp.Activity3">

    <TextView android:id="@+id/activity3_heading" android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen34_button"
        android:id="@+id/button3to4"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendToActivity4"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen32_button"
        android:id="@+id/button3to2"
        android:layout_alignTop="@+id/button3to4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="sendToActivity2"
        android:clickable="true" />

</RelativeLayout>
